--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Kim, Andrew <andrewkimka@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.13"
+python = ">=3.10"
 google-api-python-client = "^2.149.0"
 google-auth = "^2.35.0"
 google-cloud-bigquery = "^3.26.0"
 polars = "^1.9.0"
 pyarrow = "^17.0.0"
 pandas = "^2.2.3"
+prefect = "^3.0.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.1.3"
