--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ polars = "^1.9.0"
 pyarrow = "^17.0.0"
 pandas = "^2.2.3"
 prefect = "^3.0.10"
+dbt-bigquery = "^1.8.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.1.3"
